--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <a class="nav-link" href="This_Months_Book.html">This Month's Book</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="Next_Months_book.html">Next Month's Book</a>
+            <a class="nav-link" href="Next_Months_Book.html">Next Month's Book</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="Books_We_Have_Read.html">Books We Have Read</a>
