--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <a class="nav-link" href="This_Months_Book.html">This Month's Book</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="Next_Months_Book.html">Next Month's Book</a>
+            <a class="nav-link" href="Next_Months_book.html">Next Month's Book</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="Books_We_Have_Read.html">Books We Have Read</a>
@@ -77,7 +77,7 @@
      </div>
      <div class="next_month">
        <img class="next_month_image" src="images/Next Month.jpg" alt="Next Months image">
-       <a href="Next_Months_Book.html">Vote For Next Months Book</a>
+       <a href="Next_Months_book.html">Vote For Next Months Book</a>
 
      </div>
    </div>
